# EvalOps-public

./: .gitignore  LICENSE  Makefile  README.en.md  README.md  README.zh-CN.md
.github/workflows/: ci.yml
datasets/agent-toy/: benchmark.yaml  cases.yaml
datasets/hotpotqa-dev-100/: benchmark.yaml
datasets/hotpotqa-dev-100/cases/: cases_000.yaml  cases_001.yaml  cases_002.yaml  cases_003.yaml
datasets/rag-toy/: benchmark.yaml  cases.yaml
datasets/tau-bench-lite/: benchmark.yaml
datasets/tau-bench-lite/cases/: 01-lookup-and-multihop.yaml  02-tools-and-files.yaml  03-unanswerable-and-recovery.yaml
docs/: architecture.md  reference-sut-changeset.md  week1-status.md  week2-status.md  week3-status.md
infra/: README.md  docker-compose.yml
infra/grafana/dashboards/: evalops-overview.json
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/prometheus/: prometheus.yml
proto/: README.md  buf.gen.yaml  buf.yaml
proto/evalops/v1/: common.proto  dataset.proto  judge.proto  runner.proto
scripts/: deploy-sidecar.sh  fetch-hotpotqa.sh
services/control-plane/: go.mod  go.sum
services/control-plane/cmd/server/: main.go
services/control-plane/internal/config/: config.go
services/control-plane/internal/handler/: doc.go  health.go  runs.go
services/control-plane/internal/middleware/: logger.go  metrics.go  request_id.go
services/control-plane/internal/observability/: metrics.go
services/control-plane/internal/proto/evalops/v1/: common.pb.go  dataset.pb.go  dataset_grpc.pb.go  judge.pb.go  judge_grpc.pb.go  runner.pb.go  runner_grpc.pb.go
services/control-plane/internal/router/: router.go
services/eval-engine/: pyproject.toml
services/eval-engine/src/evalops/: __init__.py  config.py  logging.py  models.py
services/eval-engine/src/evalops/adapters/: __init__.py  base.py  mock.py  reference.py
services/eval-engine/src/evalops/cli/: main.py
services/eval-engine/src/evalops/datasets/: __init__.py  hotpotqa.py
services/eval-engine/src/evalops/judge/: __init__.py  agent.py  base.py  hybrid.py  llm.py  llm_stub.py  metrics.py  prompts.py  rule.py
services/eval-engine/src/evalops/observability/: __init__.py  metrics.py  tracing.py
services/eval-engine/src/evalops/runner/: __init__.py  engine.py  io.py
services/eval-engine/src/evalops/v1/: __init__.py  common_pb2.py  dataset_pb2.py  dataset_pb2_grpc.py  judge_pb2.py  judge_pb2_grpc.py  runner_pb2.py  runner_pb2_grpc.py
services/eval-engine/tests/: test_judge_agent.py  test_judge_hybrid.py  test_judge_llm.py  test_metrics.py  test_observability.py  test_runner_dual_judge.py  test_runner_mock.py  test_runner_resume.py  test_tau_bench_lite.py
sut-extensions/reference-agent-sidecar/: README.md  pyproject.toml
sut-extensions/reference-agent-sidecar/sandbox/: product-specs.md  release-notes.txt
sut-extensions/reference-agent-sidecar/src/agent_sidecar/: __init__.py  executor.py  server.py  tools.py
web/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/frontend/src/: App.tsx  main.tsx
