[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evalops-eval-engine"
version = "0.1.0"
description = "EvalOps evaluation engine — runner, judges, adapters, analysis."
requires-python = ">=3.11"
authors = [{ name = "yanjieij" }]
dependencies = [
  # Core
  "pydantic>=2.5.0",
  "pydantic-settings>=2.1.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "httpx>=0.27.0",
  "anyio>=4.3.0",
  "pyyaml>=6.0",
  "python-dotenv>=1.0.0",
  "structlog>=24.1.0",

  # Numeric / metrics
  "numpy>=1.26.0",

  # Generated proto stubs (checked in, but need runtime libs)
  "protobuf>=5.0.0,<7.0.0",
  "grpcio>=1.60.0",

  # Observability
  "opentelemetry-api>=1.20.0",
  "opentelemetry-sdk>=1.20.0",
  "opentelemetry-exporter-otlp-proto-http>=1.20.0",
  "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]
# Heavy optional deps — Week 2+ features.
#
# LiteLLM wraps all major providers (OpenAI, Anthropic, ZhipuAI, Qwen,
# Gemini, Bedrock, Ollama, ...) behind a single chat.completions-style
# API. Judge configs name a model like "gpt-4o-2024-08-06" or
# "claude-3-5-sonnet-20240620" and LiteLLM routes it — no code change
# needed to add a new provider. This keeps JUDGE_KIND_LLM_DUAL provider-
# agnostic: the dual-judge Cohen's kappa is computed exactly the same
# whether we pair OpenAI with Anthropic, Anthropic with ZhipuAI, etc.
llm-judge = [
  "litellm>=1.40.0",
]
analysis = [
  "scikit-learn>=1.4.0",
  "hdbscan>=0.8.33",
  "polars>=0.20.0",
  "plotly>=5.20.0",
]
rag-metrics = [
  "ragas>=0.1.10",
]

[project.scripts]
evalops = "evalops.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/evalops"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]
# Generated code lives at src/evalops/v1 (buf output). It's checked in
# for Week 1+ build simplicity but never hand-edited, so lint is off.
extend-exclude = ["src/evalops/v1"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
  "E501",    # line length handled by formatter
  "B008",    # Typer uses typer.Option() as argument defaults — by design
  "RUF001",  # ambiguous unicode in strings (–, ×) — fine in prose
  "RUF002",  # ambiguous unicode in docstrings
  "UP042",   # `class Foo(str, Enum)` remains the pydantic-friendly pattern
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
