[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reference-agent-sidecar"
version = "0.1.0"
description = "Minimal ReAct-style Agent sidecar for a reference enterprise app. Additive-only and easy to swap out in public demos."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.5",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]

[project.scripts]
agent-sidecar = "agent_sidecar.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_sidecar"]
